--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
+    "publish": "GIT_USER=nicolas415 DEPLOYMENT_BRANCH=gh-pages npm run deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
